plugins {
    id 'java'
}

// Force IDE Gradle sync for JPMS modules


group = 'com.jamma'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

subprojects {
    apply plugin: 'java'

    group = rootProject.group
    version = rootProject.version

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation platform('org.junit:junit-bom:6.0.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.joml:joml:1.10.8'
    }

    tasks.withType(Test).configureEach {
        testLogging {
            showStandardStreams = true
        }
        useJUnitPlatform()
    }
}
